--- a/ordenDolly.html
+++ b/ordenDolly.html
@@ -113,7 +113,7 @@
             text-align: center;
         }
         .reference-images img {
-            max-width: 100%;
+            max-width: 25%; /* Modificación aquí */
             height: auto;
             border: 1px solid #ccc;
             padding: 5px;
