--- a/ordenDolly.html
+++ b/ordenDolly.html
@@ -433,6 +433,9 @@
                 document.getElementById('firma-section').style.display = 'block';
                 firmaImg.src = getAppSheetImageUrl(firmaFileName);
             }
+
+            // Comando de impresión directa
+            window.print();
         });
     </script>
 </body>
