--- a/ordenDolly.html
+++ b/ordenDolly.html
@@ -146,6 +146,25 @@
             margin-top: 5px;
             font-style: italic;
         }
+
+        .save-pdf-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease;
+        }
+
+        .save-pdf-button:hover {
+            background-color: #0056b3;
+        }
         
         /* Estilos específicos para impresión */
         @media print {
@@ -160,6 +179,9 @@
             }
             .header-table, .main-content, .observations-table, .reference-images, .modification-section {
                 page-break-inside: avoid;
+            }
+            .save-pdf-button {
+                display: none;
             }
         }
     </style>
@@ -302,6 +324,8 @@
         </div>
     </div>
     
+    <button class="save-pdf-button" onclick="window.print()">Guardar como PDF</button>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
@@ -433,11 +457,6 @@
                 document.getElementById('firma-section').style.display = 'block';
                 firmaImg.src = getAppSheetImageUrl(firmaFileName);
             }
-
-            // Comando de impresión directa con retraso
-            setTimeout(() => {
-                window.print();
-            }, 1500); // 1.5 segundos de retraso
         });
     </script>
 </body>
