--- a/OrdenJaula.html
+++ b/OrdenJaula.html
@@ -234,7 +234,7 @@
         <tr>
             <td colspan="2">
                 <div class="field-label">MEDIDAS:</div>
-                <div class="field-value full-width-field"><span id="medidas"></span></div>
+                <div class="field-value"><span id="medidas"></span></div>
             </td>
         </tr>
         <tr>
