--- a/OrdenJaula.html
+++ b/OrdenJaula.html
@@ -232,9 +232,13 @@
             <td class="section-header" colspan="2"><strong>Plataforma</strong></td>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
                 <div class="field-label">MEDIDAS:</div>
-                <div class="field-value"><span id="medidas"></span></div>
+                <div class="field-value full-width-field"><span id="medidas"></span></div>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <div class="field-label">COLOR PRIMARIO:</div>
                 <div class="field-value"><span id="colorPrimario"></span></div>
                 <br>
@@ -273,7 +277,6 @@
                 <br>
             </td>
             <td>
-                
                 <div class="field-label">PERNO REY:</div>
                 <div class="field-value"><span id="pernoRey"></span></div>
                 <br>
